Scrollbar on query list + fix metadata when no result

--- a/css/client.css
+++ b/css/client.css
@@ -48,3 +48,9 @@ textarea{
 #timer{
   margin-left: 0;
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
